2025-03-09 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Use O_NONBLOCK when opening files
	* Add AIDE_VERSION macro variable

2025-03-07 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Escape further special characters in JSON strings (closes: #189)

2025-03-02 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Minor code improvements and code cleanup
	* Properly close file descriptors of included config files
	* Improve some logging

2025-03-01 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add support for file system type restricted rules (Linux only)
	  - add 'fstype' attribute
	  - add '--without-fstype' configure option
	  - closes: #39

2025-02-23 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix omission of file type in database report section

2025-02-22 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Apply rules only to file system entries and no longer to database
	  entries
	* Fix available hashsums in --version output when using
	  libgcrypt (closes: #187)
	* Fix display of unknown file type in detailed report section

2025-02-22 yixiangzhike <yixiangzhike007@163.com>
	* Remove deprecated hashsums from default config option database_attrs

2025-01-13 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix calculation of duration

2025-01-12 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Refactor file processing code
	  - operate on file descriptor (opened once)
	  - significantly reduce "file has changed" warnings
	  - warn about file change after hash calculation
	  - disable attributes if not supported by file type
	  - improve error handling
	  - improve logging

2025-01-02 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add missing suffix to decimal constants

2025-01-01 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix entries per second calculation for logging
	* Limit Linux capabilities to regular files

2024-11-23 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Refactor code to prepare for file system type restrictions